--- a/serve.html
+++ b/serve.html
@@ -43,7 +43,7 @@
     <!-- serve区域 -->
     <div class="serve w clearfix">
         <div class="nav-left">
-            <img src="./images/n5.png" alt="">
+            <div class="img"><img src="./images/n5.png" alt=""></div>
             <div class="serve-nav">
                 <ul>
                     <li>冷冻货物 <img src="./images/icon10.png" alt=""><img src="./images/icon10.png" alt=""></li>
