--- a/customer.html
+++ b/customer.html
@@ -1,12 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/customer.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <!-- 头部区域 -->
+    <header class="w header">
+        <div class="logo"><img src="./images/logo.jpg" title="公司"></div>
+        <div class="seek">
+            <img src="./images/icon1.jpg" title="拨打电话">
+            <span style="color:#aaa; font-size:13px">咨询热线:</span>
+            <span style="color: red;font-size:20px">&nbsp;&nbsp;0755-82996589</span>
+            <span style="font-size:14px ;">&nbsp;&nbsp;<span style="color:skyblue">简</span>&nbsp;/&nbsp;&nbsp;EN</span>
+        </div>
+    </header>
+
+    <!-- nav区域 -->
+    <div class="nav w">
+        <ul>
+            <li> <a href="#">首页</a> </li>
+            <li> <a href="#">海关服务</a> </li>
+            <li> <a href="#">客户案例</a> </li>
+            <li> <a href="#">海关新政</a> </li>
+            <li> <a href="#">帮助中心</a> </li>
+            <li> <a href="#">关于我们</a> </li>
+        </ul>
+    </div>
+
+    <!-- banner区域 -->
+    <div class="banner w">
+        <img src="./images/banner.jpg" alt="">
+    </div>
+
+    <!-- content-customer -->
+    <div class="content-customer clearfix w">
+        <div class="title">
+            <div class="img"><img src="./images/n2.png" alt=""></div>
+            <span>您当前的位置：客户案例</span>
+        </div>
+        <div class="list">
+            <ul>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                <li> <img src="./imgs/pic6.jpg" width="100%" height="100%" alt=""> </li>
+                
+            </ul>
+        </div>
+
+        <div class="pagination">
+                <ul>
+                    <li style="width:40px;"> <button>首页</button></li>
+                    <li style="width:60px ;"> <button>上一页</button> </li>
+                    <li><button style="background-color: skyblue; border:none">1</button></li>
+                    <li><button>2</button></li>
+                    <li><button>3</button></li>
+                    <li><button>4</button></li>
+                    <li><button>5</button></li>
+                    <li><button>...</button></li>
+                    <li style="width:60px ;"> <button>下一页</button> </li>
+                    <li style="width:40px ;"> <button>尾页</button> </li>
+                </ul>
+        </div>
+    </div>
+
+    <!-- footer部分 -->
+    <div class="footer">
+        <div class="content w">
+            <dl>
+                <dt>清关服务</dt>
+                <dd>冷冻货物</dd>
+                <dd>特殊货物</dd>
+                <dd>船公司费率</dd>
+                <dd>2016进口关税</dd>
+                <dd>今日汇率</dd>
+            </dl>
+            <dl>
+                <dt>清关服务</dt>
+                <dd>冷冻货物</dd>
+                <dd>特殊货物</dd>
+                <dd>船公司费率</dd>
+                <dd>2016进口关税</dd>
+                <dd>今日汇率</dd>
+            </dl>
+            <dl>
+                <dt>清关服务</dt>
+                <dd>冷冻货物</dd>
+                <dd>特殊货物</dd>
+                <dd>船公司费率</dd>
+                <dd>2016进口关税</dd>
+                <dd>今日汇率</dd>
+            </dl>
+            <dl>
+                <dt>清关服务</dt>
+                <dd>冷冻货物</dd>
+                <dd>特殊货物</dd>
+                <dd>船公司费率</dd>
+                <dd>2016进口关税</dd>
+                <dd>今日汇率</dd>
+            </dl>
+            <dl>
+                <dt>清关服务</dt>
+                <dd>冷冻货物</dd>
+                <dd>特殊货物</dd>
+                <dd>船公司费率</dd>
+                <dd>2016进口关税</dd>
+                <dd>今日汇率</dd>
+            </dl>
+            <div class="erweima">
+                <img src="./imgs/code.jpg">
+                <p>扫一扫即可关注我们</p>
+            </div>
+        </div>
+        <div class="version">
+            版权所有 © 深圳市鸿鹏进出口有限公司 粤ICP备15107699号 技术支持：华鑫峰网站建设公司
+        </div>
+    </div>
 </body>
+
 </html>
