--- a/news.html
+++ b/news.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/news.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- 头部区域 -->
     <header class="w header">
@@ -19,7 +21,7 @@
             <span style="font-size:14px ;">&nbsp;&nbsp;<span style="color:skyblue">简</span>&nbsp;/&nbsp;&nbsp;EN</span>
         </div>
     </header>
-    
+
     <!-- nav区域 -->
     <div class="nav w">
         <ul>
@@ -31,7 +33,7 @@
             <li> <a href="#">关于我们</a> </li>
         </ul>
     </div>
-    
+
     <!-- banner区域 -->
     <div class="banner w">
         <img src="./images/banner.jpg" alt="">
@@ -42,11 +44,10 @@
             <div class="img"><img src="./images/n5.png" alt=""></div>
             <div class="serve-nav">
                 <ul>
-                    <li>冷冻货物 <img src="./images/icon10.png" alt=""><img src="./images/icon10.png" alt=""></li>
-                    <li>冷冻货物</li>
-                    <li>船公司费率</li>
-                    <li>2016进口关税</li>
-                    <li>冷冻货物</li>
+                    <li style="color: #006DAC;">海关新政 <img src="./images/icon10.png" alt=""><img
+                            src="./images/icon10.png" alt=""></li>
+                    <li>行业新闻</li>
+                    <li>专题报道</li>
                 </ul>
             </div>
         </div>
@@ -156,4 +157,5 @@
         </div>
     </div>
 </body>
+
 </html>
