--- a/serve.html
+++ b/serve.html
@@ -46,7 +46,7 @@
             <div class="img"><img src="./images/n5.png" alt=""></div>
             <div class="serve-nav">
                 <ul>
-                    <li>冷冻货物 <img src="./images/icon10.png" alt=""><img src="./images/icon10.png" alt=""></li>
+                    <li style="color: #006DAC;">冷冻货物 <img src="./images/icon10.png" alt=""><img src="./images/icon10.png" alt=""></li>
                     <li>冷冻货物</li>
                     <li>船公司费率</li>
                     <li>2016进口关税</li>
