--- a/news.html
+++ b/news.html
@@ -23,16 +23,16 @@
     </header>
 
     <!-- nav区域 -->
-<div class="nav w">
-    <ul>
-        <li> <a href="index.html">首页</a> </li>
-        <li> <a href="serve.html">海关服务</a> </li>
-        <li> <a href="customer.html">客户案例</a> </li>
-        <li> <a href="news.html">海关新政</a> </li>
-        <li> <a href="servePerson.html">帮助中心</a> </li>
-        <li> <a href="connect.html">关于我们</a> </li>
-    </ul>
-</div>
+    <div class="nav w">
+        <ul>
+            <li> <a href="index.html">首页</a> </li>
+            <li> <a href="serve.html">海关服务</a> </li>
+            <li> <a href="customer.html">客户案例</a> </li>
+            <li> <a href="news.html">海关新政</a> </li>
+            <li> <a href="servePerson.html">帮助中心</a> </li>
+            <li> <a href="connect.html">关于我们</a> </li>
+        </ul>
+    </div>
 
     <!-- banner区域 -->
     <div class="banner w">
@@ -54,8 +54,8 @@
 
         <div class="container-right">
             <div class="location">您当前的位置：清关服务 > 冷冻货物</div>
-            <div class="naving">冷冻货物</div>
-            <div class="list">
+            <div class="naving">海关新政</div>
+            <div class="list" style="margin-bottom: 20px;">
                 <ul>
                     <li class="list-right">2015-12-25</li>
                     <li>沈阳合金投资股份有限公司关于公司控股股东股权过户进展</li>
@@ -88,7 +88,7 @@
                 </ul>
             </div>
         </div>
-        <div class="pagination">
+        <div class="pagination" style="margin-top: 20px;" >
             <ul>
                 <li style="width:40px;"> <button>首页</button></li>
                 <li style="width:60px ;"> <button>上一页</button> </li>
